--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,9 +9,9 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>         # ここを変更
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %> # ここを変更
+  region: ap-northeast-1                                 # ここを変更ils.application.credentials.dig(:aws, :secret_access_key) %>
   bucket: booksharerails
 
 # Remember not to checkin your GCS keyfile to a repository
